--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,33 @@ version: '3'
 services:
   mongo:
     image: mongo
-    container_name: jguwekamongo
     restart: always
 
 
   jguweka:
     image: snowdwq/jguweka:OAS3
-    container_name: jguwekarest
     restart: always
     links:
       - "mongo:mongodb"
     ports:
-      - "8080:8080"
+      - "8849"
     depends_on:
       - mongo
     labels:
       - "service-name:jguweka"
       - "service-type:app-srv"
       - "environment:test"
+
+  proxy:
+    image: dockercloud/haproxy
+    depends_on:
+      - jguweka
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    links:
+      - jguweka
+    ports:
+      - "80:80"
 
 
 
