--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3'
 services:
   mongo:
     image: mongo
-    restart: always
+    restart: no
 
 
   jguweka:
     image: snowdwq/jguweka:OAS3
-    restart: always
+    restart: no
     links:
       - "mongo:mongodb"
     ports:
